Close EPIC-A18 background compaction
